objects/ssot__LoyaltyProgramMemberMerge__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Program Member Case Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonText__c</fullName>
        <label>Reason Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceMemberId__c</fullName>
        <label>Source Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetMemberId__c</fullName>
        <label>Target Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761223155_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramMemberMerge_SourceMemb_rel</label>
        <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramMemberMerge_SourceMemb_rel</relationshipLabel>
        <relationshipName>rel_1697761223155_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761224444_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramMemberMerge_TargetMemb_rel</label>
        <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramMemberMerge_TargetMemb_rel</relationshipLabel>
        <relationshipName>rel_1697761224444_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>